# python_linear_algebra

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
src/python_linear_algebra/: diffligninger.py  matrix_reduction.py
src/python_linear_algebra/matrix_reduction/: hello.py
